<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/homepage_item_navigation"
            android:orderInCategory="100"
            android:icon="@drawable/ic_homepage"
            android:title="@string/homepage"/>
    <item android:id="@+id/interest_item_navigation"
          android:orderInCategory="101"
          android:icon="@drawable/ic_interest"
          android:title="@string/interest"/>
    <item android:id="@+id/setting_item_navigation"
          android:orderInCategory="102"
          android:icon="@drawable/ic_setting"
          android:title="@string/setting"/>
    <item android:id="@+id/logout_item_navigation"
          android:orderInCategory="103"
          android:icon="@drawable/ic_logout"
          android:title="@string/logout"/>


</menu>