<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.RegisterActivity">

    <EditText
            android:layout_height="@dimen/height_plain_text"
            android:inputType="textPersonName"
            android:background="@drawable/shape_text_input"
            android:hint="@string/username_register"
            android:ems="10"
            android:id="@+id/username_text_register"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="@dimen/width_plain_text"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="@dimen/distance_start" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="@dimen/width_plain_text"
            android:layout_height="@dimen/height_plain_text"
            android:hint="@string/hint_password"
            android:background="@drawable/shape_text_input"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_text_register"
            android:layout_marginTop="@dimen/distance_vertical"
            app:layout_constraintTop_toBottomOf="@+id/username_text_register" app:layout_constraintStart_toStartOf="@+id/username_text_register"
            app:layout_constraintEnd_toEndOf="@+id/username_text_register"/>
    <EditText
            android:layout_width="@dimen/width_plain_text"
            android:layout_height="@dimen/height_plain_text"
            android:inputType="textPassword"
            android:background="@drawable/shape_text_input"
            android:hint="@string/repeat_password"
            android:ems="10"
            android:id="@+id/repeat_text_register"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/password_text_register"
            app:layout_constraintStart_toStartOf="@+id/username_text_register"
            app:layout_constraintEnd_toEndOf="@+id/username_text_register"
    />
    <EditText android:layout_width="@dimen/width_verification_code" android:layout_height="@dimen/height_plain_text"
              android:hint="@string/verification"
              android:background="@drawable/shape_text_input"
              app:layout_constraintStart_toStartOf="@+id/username_text_register"
              android:id="@+id/verification_text_register"
              android:layout_marginTop="32dp"
              app:layout_constraintTop_toBottomOf="@+id/repeat_text_register"/>
    <com.eqiba.kizen.client.view.VerificationCode
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_margin="50dp" android:padding="10dp" app:lineSize="5"
            app:pointSize="60" app:textColor="@color/colorAccent" app:titleSize="21sp"
            android:id="@+id/verification_register"
            app:layout_constraintStart_toEndOf="@+id/verification_text_register"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/verification_text_register" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/verification_text_register"
            app:layout_constraintEnd_toEndOf="@+id/repeat_text_register" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/button_register"
            android:layout_width="@dimen/width_login_button"
            android:layout_height="@dimen/height_login_button"
            android:background="@drawable/shape_button"
            android:id="@+id/register_button_register" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="@dimen/distance_bottom"
            android:textAppearance="@style/TextAppearance.AppCompat"/>

</android.support.constraint.ConstraintLayout>