<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.ActivityActivity">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content" android:orientation="vertical">

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:id="@+id/title_activity" android:text="@string/activity_title"
                      android:textSize="@dimen/size_text_medium"
                      android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                      android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                      android:layout_marginTop="8dp"/>

            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:layout_width="20dp"
                           android:layout_height="20dp"
                           android:src="@drawable/ic_location"
                           android:layout_marginLeft="8dp"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textSize="@dimen/size_text_mini" android:text="@string/location_example"
                          android:layout_gravity="center_vertical" android:layout_marginLeft="8dp"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="horizontal" android:layout_marginTop="8dp">

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textSize="@dimen/size_text_mini" android:id="@+id/status_activity"
                          android:text="准备阶段"
                          android:layout_weight="1"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="活动开始时间：4-13 13:00" android:id="@+id/time_next_stage"
                          android:textSize="@dimen/size_text_mini"/>
            </LinearLayout>

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:textSize="@dimen/size_text_normal" android:id="@+id/content_activity"
                      android:text="@string/activity_content_example"
                      android:layout_marginTop="24dp"
                      android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                      android:layout_marginRight="16dp" app:fontFamily="cursive"/>
            <android.support.v4.view.ViewPager android:layout_width="@dimen/width_pager"
                                               android:layout_height="@dimen/height_pager"
                                               android:layout_marginTop="16dp"
                                               android:layout_gravity="center_horizontal"
                                               android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                                               android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                                               android:id="@+id/pics_activity"/>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="16dp"
                          android:orientation="horizontal">

                <Button android:layout_width="@dimen/width_login_button"
                        android:layout_height="@dimen/height_join_button"
                        android:background="@drawable/shape_button"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/join"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"/>
                <Button android:layout_width="@dimen/width_login_button"
                        android:layout_height="@dimen/height_join_button"
                        android:background="@drawable/shape_button"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:text="加入会话"/>
            </LinearLayout>


        </LinearLayout>
</ScrollView>