<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.LoginActivity">

    <com.eqiba.kizen.client.view.CircleImageView android:layout_width="@dimen/radius_head_login"
                                                 android:layout_height="@dimen/radius_head_login"
                                                 android:src="@drawable/ic_mine"
                                                 app:layout_constraintEnd_toEndOf="parent"
                                                 android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                                                 app:layout_constraintStart_toStartOf="parent"
                                                 android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                                                 android:layout_marginBottom="32dp"
                                                 app:layout_constraintBottom_toTopOf="@+id/guideline2"/>

    <EditText
            android:layout_width="@dimen/width_plain_text"
            android:layout_height="@dimen/height_plain_text"
            android:hint="@string/hint_username"
            android:background="@drawable/shape_text_input"
            android:inputType="textPersonName"
            android:ems="10"
            android:maxLength="15"
            android:id="@+id/username_login"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/guideline1" />
    <EditText
            android:layout_width="@dimen/width_plain_text"
            android:layout_height="@dimen/height_plain_text"
            android:hint="@string/hint_password"
            android:background="@drawable/shape_text_input"
            android:inputType="textPassword"
            android:ems="10"
            android:maxLength="20"
            android:id="@+id/password_login"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline1" android:layout_marginTop="32dp"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline1"
                                          android:orientation="horizontal" app:layout_constraintGuide_percent="0.55"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline2"
                                          android:orientation="horizontal" app:layout_constraintGuide_percent="0.37"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline3" android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.5"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline4" android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.7"/>
    <Button
            android:text="@string/button_login"
            android:layout_width="@dimen/width_login_button"
            android:layout_height="@dimen/height_login_button"
            android:background="@drawable/shape_button"
            android:id="@+id/login_button" app:layout_constraintEnd_toStartOf="@+id/guideline3"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" app:layout_constraintTop_toTopOf="@+id/guideline4"
            android:layout_marginTop="32dp"/>
    <Button
            android:text="@string/button_register"
            android:layout_width="@dimen/width_login_button"
            android:layout_height="@dimen/height_login_button"
            android:background="@drawable/shape_button"
            android:id="@+id/register_button" app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="@+id/guideline4" android:layout_marginTop="32dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/radius_head_login"
            android:layout_height="@dimen/radius_head_login"
            android:id="@+id/progressBar_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>